# coloros-icons-patch

./: .gitignore
.github/: uxicons-normalize.yml
.github/workflows/: build-module.yml  release-icons.yml  uxicons-normalize.yml
beta/history/: 2026.02.10-r1.json  2026.3.20-r1.json
cip/: Cargo.toml  config.toml
cip/src/: app.rs  appscan.rs  cli.rs  main.rs  settings.rs  update.rs
cip/src/app/: check.rs  config.rs  init.rs  scan.rs  update.rs
cip/src/cli/: check.rs  config.rs  init.rs  root.rs  scan.rs  update.rs
cip/src/config/: loader.rs  model.rs
cip/src/core/: updater.rs
module/: customize.sh  module.prop  post-fs-data.sh  service.sh  uninstall.sh
module/beta/history/: 0.1.3-r1.json  0.1.3-r2.json  0.1.3-r3.json  0.1.3-r4.json  0.1.3-r5.json
module/stable/: index.json
module/stable/history/: 0.2.1-r1.json  0.2.2-r1.json
module/webroot/: app.css  app.js  index.html
rust/: Cargo.toml
rust/src/: appscan.rs  main.rs  settings.rs  state.rs  update.rs
scripts/: bump-version.sh  normalize_uxicons_images.py
stable/: index.json
stable/history/: 0.2.1-r1.json  0.2.2-r1.json  2026.3.22-r1.json
uxicons/com.soft.blued/: desktop.ini
webui/: index.html  package.json  pnpm-lock.yaml
webui/src/: App.vue  style.css  tabs.ts
webui/src/components/: Card.vue  Navbar.vue  Topbar.vue
webui/src/composables/: useApi.ts  useI18n.ts
webui/src/constants/: icons.ts  index.ts
webui/src/locales/: index.ts
webui/src/mocks/: kernelsuMock.ts
webui/src/stores/: configStore.ts
webui/src/types/: config.ts
webui/src/views/: About.vue  Home.vue  (+1 more)
