[package]
name = "cip"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.32"
hex = "0.4.3"
nix = { version = "0.31.1", default-features = false, features = [
  "user",
  "fs",
] }
reqwest = { version = "0.12.12", default-features = false, features = [
  "blocking",
  "json",
  "gzip",
  "rustls-tls-webpki-roots",
  "stream",
] }
rustls-platform-verifier = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
time = { version = "0.3.47", features = ["serde", "formatting"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
toml_edit = "0.25.5"
zip = "8.3.0"
